# ISP-AI-Agent

./: 135.md  README.md  planas.md  structure.txt  struktura.md
isp-customer-service/: .env.exemple  .gitignore  ISP_CHATBOT_DOCUMENTATION.md  PROJECT_STRUCTURE.md  Procfile  README.md  WORKFLOW_GRAPHS.md  cli_chat.py  dabartine_SChema.md  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  struktura_v3.md  verify_structure.py
isp-customer-service/chatbot_core/: RAG_TESTING.md  cli_chat.py  cli_chat1.py  cli_chat_.py  demo_scenarios.md  main.py  pyproject.toml  requirements.txt  run_rag_test.py  test_chatbot.py  test_config_loaders.py  test_direct_subprocess.py  test_env.py  test_mcp_simple.py  test_mcp_tools.py
isp-customer-service/chatbot_core/src/: __init__.py
isp-customer-service/chatbot_core/src/agent/: __init__.py  config.py  conversation_agent.py  react_agent.py  state.py  tools.py
isp-customer-service/chatbot_core/src/agent/prompts/: __init__.py  greeting.txt  system_prompt.txt
isp-customer-service/chatbot_core/src/cli/: __init__.py  interface.py  utils.py
isp-customer-service/chatbot_core/src/config/: __init__.py  config.py  config.yaml  messages.yaml  problem_types.yaml  prompts_lt.yaml  settings.yaml  troubleshooting_mappings.yaml
isp-customer-service/chatbot_core/src/config/old/: problems.yaml  prompts.py  prompts_en.yaml  prompts_lt.yaml  settings.yaml
isp-customer-service/chatbot_core/src/graph/: __init__.py  graph.py  old_state.py  state.py  state_manager.py  structure_flow.md  workflow.py
isp-customer-service/chatbot_core/src/graph/edges/: __init__.py  conditions.py  routers.py
isp-customer-service/chatbot_core/src/graph/nodes/: __init__.py  address_confirmation.py  address_search.py  address_selection.py  closing.py  create_ticket.py  customer_identification.py  customer_identification_old.py  diagnostics.py  diagnostics_old.py  greeting.py  inform_provider_issue.py  phone_lookup.py  phone_lookup_background.py  problem_capture.py  problem_identification.py  problem_identification_old.py  resolution.py  ticket_registration.py  troubleshooting.py
isp-customer-service/chatbot_core/src/locales/: __init__.py  loader.py
isp-customer-service/chatbot_core/src/locales/translations/: en.yaml  lt.yaml
isp-customer-service/chatbot_core/src/prompts/problem_capture/: analyze_problem.txt
isp-customer-service/chatbot_core/src/prompts/shared/: system_persona.txt
isp-customer-service/chatbot_core/src/rag/: __init__.py  document_processor.py  embeddings.py  hybrid_retriever.py  retriever.py  scenario_loader.py  vector_store.py
isp-customer-service/chatbot_core/src/rag/scripts/: build_kb.py  load_scenarios.py  test_rag_loading.py
isp-customer-service/chatbot_core/src/rag/vector_store_data/: production_metadata.pkl
isp-customer-service/chatbot_core/src/services/: __init__.py  config_loader.py  crm.py  custom_mcp_client.py  language_service.py  llm.py  llm_service.py  mcp_service.py  network.py  prompt_loader.py  translation_service.py
isp-customer-service/chatbot_core/src/services/llm/: __init__.py  cache.py  client.py  llm_service.py  models.py  rate_limiter.py  settings.py  stats.py  utils.py
isp-customer-service/chatbot_core/src/streamlit_ui/: README.md  app.py  requirements.txt
isp-customer-service/chatbot_core/src/streamlit_ui/components/: __init__.py  call_interface.py  demo_guide.py  docs.py  monitor.py  monitoring.py  settings.py
isp-customer-service/chatbot_core/src/streamlit_ui/ui_utils/: __init__.py  chatbot_bridge.py  session.py
isp-customer-service/chatbot_core/src/ui_old/components/: call_interface.py  docs.py
isp-customer-service/chatbot_core/src/ui_old/ui_utils/: __init__.py  session.py
isp-customer-service/chatbot_core/state_storage/active/: conv-20251117-160831.json  conv-20251117-162542.json  conv-20251118-085221.json  conv-20251118-090958.json
isp-customer-service/chatbot_core/tests/: README_6.md  __init__.py  conftest.py  pytest.ini  run_tests.py  test_agent.py  test_rag.py  test_routers.py  test_scenarios.py  test_tools.py  test_workflow_integration.py
isp-customer-service/crm_service/: main.py  pyproject.toml  test_crm_standalone.py  test_mcp_protocol.py  test_phone_lookup.py
isp-customer-service/crm_service/src/: __init__.py
isp-customer-service/crm_service/src/crm_mcp/: __init__.py  server.py
isp-customer-service/crm_service/src/crm_mcp/tools/: customer_lookup.py  equipment.py  (+1 more)
isp-customer-service/crm_service/src/mcp_server/: server.py
isp-customer-service/crm_service/src/repository/: __init__.py  customer_repo.py  ticket_repo.py
isp-customer-service/crm_service/tests/: __init__.py
isp-customer-service/database/schema/: crm_schema.sql  network_schema.sql
isp-customer-service/database/seeds/: addresses.sql  customers.sql  equipment.sql  network.sql  service_plans.sql
isp-customer-service/docs/: Architecture.md  CONFIGURATION.md  INSTALLATION.md  INSTALLATION_1.md  MCP_TOOLS.md  RAG_SYSTEM.md  REACT_AGENT.md  TOOLS.md  WORKFLOW.md
isp-customer-service/docs/old/: Architecture.md  RAG_DOCUMENTATION.md  WORKFLOW_ARCHITECTURE.md
isp-customer-service/network_diagnostic_service/: main.py  pyproject.toml
isp-customer-service/network_diagnostic_service/src/: __init__.py
isp-customer-service/network_diagnostic_service/src/mcp_server/: server.py
isp-customer-service/network_diagnostic_service/src/network_diagnostic_mcp/: __init__.py  server.py
isp-customer-service/network_diagnostic_service/src/repository/: __init__.py  network_repo.py
isp-customer-service/network_diagnostic_service/tests/: __init__.py
isp-customer-service/scripts/: seed_data.py  setup_db.py  test_crm_service.py  test_network_service.py  test_shared.py
isp-customer-service/shared/: README.md  pyproject.toml
isp-customer-service/shared/src/: __init__.py
isp-customer-service/shared/src/database/: __init__.py  base.py  connection.py
isp-customer-service/shared/src/isp_types/: __init__.py  customer.py  network.py  ticket.py
isp-customer-service/shared/src/utils/: __init__.py  config.py  logger.py
(+25 files in other folders)
