[project]
name = "isp-customer-service"
version = "0.1.0"
description = "ISP Customer Service Chatbot with LangGraph and MCP"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Andrius", email = "aplienius@gmail.com" }
]

# All dependencies inline (no workspace references for Railway)
dependencies = [
    # Core Framework
    "streamlit>=1.30.0",
    # LLM Integration
    "litellm>=1.80.5",
    "openai>=1.0.0",
    # LangChain/LangGraph
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langsmith>=0.0.87",
    # RAG System
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    # Database
    "psycopg2-binary>=2.9.0",
    # Configuration
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "colorama>=0.4.6",
    "httpx>=0.25.0",
    # MCP (optional - comment out if not needed)
    # "mcp>=1.21.0",
    # "nest-asyncio>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared/src", "chatbot_core/src", "database", "scripts"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true