[project]
name = "chatbot-core"
version = "0.1.0"
description = "ISP Customer Service Chatbot - Core conversational engine"
requires-python = ">=3.12"

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.1.0",
    "streamlit>=1.39.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
