[project]
name = "chatbot-core"
version = "0.1.0"
description = "ISP Customer Service Chatbot - Main application with LangGraph"
requires-python = ">=3.12"

dependencies = [
    "isp-shared",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langsmith>=0.0.87",
    "openai>=1.0.0",
    "streamlit>=1.30.0",
     # RAG dependencies
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
isp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]