[project]
name = "crm-service"
version = "0.1.0"
description = "ISP CRM Service - MCP Server for customer data"
requires-python = ">=3.12"

dependencies = [
    "isp-shared",
    "mcp>=1.0.0",
    "python-levenshtein>=0.25.0",  # For fuzzy matching
]

[project.scripts]
crm-service = "crm_mcp.server:main"

[tool.uv.sources]
isp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crm_mcp"]






