[project]
name = "network-diagnostic-service"
version = "0.1.0"
description = "ISP Network Diagnostic Service - Network monitoring and diagnostics via MCP"
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"