[project]
name = "network-diagnostic-service"
version = "0.1.0"
description = "ISP Network Diagnostic Service - MCP Server for network diagnostics"
requires-python = ">=3.12"

dependencies = [
    "isp-shared",
    "mcp>=1.0.0",
]

[tool.uv.sources]
isp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]