[project]
name = "isp-shared"
version = "0.1.0"
description = "Shared utilities, types, and database connection for ISP services"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database", "src/isp_types", "src/utils"]






